Updated FAQ with health and safety question

--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
                 and high school communities. To learn more, check out our
                 organization website <a href="https://hack.gt">here</a>.
               </p>
+
               <p>What is the A/B schedule? Which one should I pick?</p>
               <p>
                 To accomodate as many students as possible, we have split the
@@ -385,6 +386,11 @@
                 you choose has no effect on the content you learn, so pick the one that
                 is most convenient for you! Please note that students being picked-up
                 or dropped-off together should register for the same session.
+              </p>
+
+              <p>What steps are you taking to ensure participants' safety and health during this event?</p>
+              <p>
+                Effective immediately, Georgia Tech is requiring that all large-scale campus events adopt enhanced public health protocols. As event organizers, we will increase available hand sanitizer as well as adopt more stringent pre- and post-cleaning regimens. This includes using cleaning products that disinfect and focusing on shared surfaces such as tabletops, door handles, and the like. We are monitoring the situation and will keep you updated. The health and safety of everyone involved in Catalyst is of our utmost importance. For any additional questions or concerns, please contact us at <a href="mailto:hello@hack.gt">hello@hack.gt</a>!
               </p>
 
               <p>Other Questions?</p>
