change registration to say pushing to fall

--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
                 <img src="assets/logo.png" />
               </div>
               <h3>Presented by HackGT</h3>
-              <h4>Saturday, March 28, 2020</h4>
+              <!-- <h4>Saturday, March 28, 2020</h4> -->
             </div>
           </div>
           <div id="#bucket">
-            <a href="https://registration.catalyst.hack.gt/" target="_blank">
+            <!-- <a href="https://registration.catalyst.hack.gt/" target="_blank">
               <div  class="register">
                 <p>Register</p>
               </div>
-            </a>
-            <div id="countdown">
+            </a> -->
+            <!-- <div id="countdown">
               <div><span id="days">0</span></div>
               <div><span id="hours">0</span></div>
               <div><span id="minutes">0</span></div>
               <div><span id="seconds">0</span></div>
-            </div>
+            </div> -->
   
             <!--<div class="register"><a href="#important-info">Day-Of Info</a></div>-->
           </div>
@@ -85,9 +85,10 @@
               <div class="col">
                 <p>
                   HackGT presents Catalyst, a FREE day of STEAM directed towards
-                  high school students in the Metro Atlanta Area. We are eager
+                  high school students in the Metro Atlanta Area. 
+                  <!-- We are eager
                   to welcome all of these students on
-                  <b><u>Saturday, March 28th</u></b> to Georgia Tech's Campus.
+                  <b><u>Saturday, March 28th</u></b> to Georgia Tech's Campus. -->
                 </p>
                 <p>This will be an opportunity for participants to:</p>
                 <ul>
@@ -175,7 +176,7 @@
             <h1>Registration</h1>
             <div class="container">
               <div class="col">
-                <p>
+                <!-- <p>
                   You can register
                   <a href="https://registration.catalyst.hack.gt/" target="_blank">here!</a>
                 </p>
@@ -186,15 +187,18 @@
                 <p>
                   Partcipants <strong>MUST</strong> bring the necessary forms to the event
                   as stated by registration:
+                </p> -->
+                <p>
+                  Catalyst has been postponed to the Fall. Check back in during that time for details!
                 </p>
-                <ul>
+                <!-- <ul>
                   <li>
                     <a href="https://drive.google.com/uc?export=download&id=1t18WRPrLpFW1kd0t9AuCfTia0waOreAu">UNDER 18</a>
                   </li>
                   <li>
                     <a href="https://drive.google.com/uc?export=download&id=1yHC27yawRhfZgv-MAJrDLN-bT3ceOyce">18 AND OLDER</a>
                   </li>
-                </ul>
+                </ul> -->
               </div>
 
               <!-- ASSET <div class="col">
