chore: updated site w/ 2021 event information
* prominent changes include:
   - withdrew any information implying an in-person event
   - removed track information (to be released later)
   - made minor edits to phrasing, grammar, etc

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                >
                   <li><span>Registration</span></li>
                </a>
-               <a
+               <!-- <a
                   href="#tracks"
                   onmouseover="gradientTime(this)"
                   onmouseout="removeColor(this)"
                >
                   <li><span>Tracks</span></li>
-               </a>
+               </a> -->
                <a
                   href="#faq"
                   onmouseover="gradientTime(this)"
@@ -98,8 +98,8 @@
                   <div class="container">
                      <div class="col">
                         <p>
-                           HackGT presents Catalyst, a FREE day of STEAM directed towards
-                           high school students in the Metro Atlanta Area.
+                           HackGT presents Catalyst, a virtual day of STEAM-related activites
+                           directed toward high school students all throughout Georgia!
                            <!--
                               We are eager
                               to welcome all of these students on
@@ -109,25 +109,24 @@
 
                         <p>This will be an opportunity for participants to:</p>
                         <ul>
-                           <li>Learn about the world of STEAM and Computer Science as a career path.</li>
-                           <li>Gain insight into impactful, widely known tech companies.</li>
-                           <li>Receive mentorship from college students and industry professionals.</li>
-                           <li>Connect with more opportunities at Georgia Tech & in the city to further their education and exposure.</li>
+                           <li>Learn about the world of STEAM and Computer Science as a career path</li>
+                           <li>Gain insight into impactful, widely-known technology companies</li>
+                           <li>Receive mentorship from college students and other industry professionals</li>
+                           <li>Connect with opportunities at Georgia Tech to further their education and exposure</li>
                         </ul><br>
 
                         <p>
-                           Are you a current Georgia Tech student? You can still participate
-                           in this event! Each year GT students volunteer as mentors to help
-                           facilitate the projects and activities included in each track. This
-                           is an opportunity for you to directly interact with high school students
-                           from the Metro Atlanta area and share your passion and knowledge for computer
-                           science and engineering. Responsibilities of mentors include:
+                           Are you a current Georgia Tech student? If so, you're still able to participate
+                           in the event! Each year, GT students volunteer as mentors to help facilitate the
+                           projects and activities included in each available track. This is an opportunity
+                           for you to directly interact with high school students across Georgia, provide
+                           helpful knowledge to aspiring minds, and share your passion for computer science
+                           and engineering. The core responsibilities of mentors include:
                         <ul>
                            <li>Co-leading a student cohort of up to 12 students</li>
                            <li>Encouraging mentees to network within cohorts</li>
-                           <li>Encouraging mentees to learn throughout the day</li>
-                           <li>Encouraging mentees to learn after Catalyst is over</li>
-                           <li>Arriving on-time and staying throughout the entire duration of the event</li>
+                           <li>Inspiring mentees to learn both during <i>and</i> after the event</li>
+                           <li>Arriving on-time and staying throughout the duration of the event</li>
                         </ul>
                         </p>
                      </div>
@@ -144,13 +143,14 @@
                   <div class="container">
                      <div class="col">
                         <p>
-                           Throughout the day, students will follow one of four tracks:
-                           Robotics, Gaming, Information Security, or MusicTech.
+                           Throughout the day, students will choose to follow one of the provided
+                           tracks. Specific tracks will be released later this season, so stay tuned!
                         </p>
                         <p>
-                           Each track will have workshops allowing students to build a piece of
-                           technology they can take home. Additionally, there will be opportunities
-                           for students to engage with industry professionals and college students.
+                           Each track will have workshops designed to inform and inspire through
+                           hands-on experience. Additionally, there will be opportunities for
+                           attendees to engage with industry professionals and experienced college
+                           students.
                         </p>
                         <p>
                            We want to show high school students the value of computer science, which
@@ -181,7 +181,7 @@
                            Partcipants <strong>MUST</strong> bring the necessary forms to the event
                            as stated by registration:
                            </p> -->
-                        <p>Catalyst has been postponed to the Fall. Check back in during that time for details!</p>
+                        <p>Registration for the event has not yet been posted. Stay tuned for more details!</p>
                         <!-- <ul>
                            <li>
                              <a href="https://drive.google.com/uc?export=download&id=1t18WRPrLpFW1kd0t9AuCfTia0waOreAu">UNDER 18</a>
@@ -198,7 +198,7 @@
                </div>
             </section>
 
-            <section id="tracks">
+            <!-- <section id="tracks">
                <div>
                   <h1>Tracks</h1>
                   <div class="container">
@@ -299,7 +299,7 @@
                      </div>
                   </div>
                </div>
-            </section>
+            </section> -->
 
             <section id="faq">
                <div>
@@ -313,14 +313,16 @@
 
                      <p>Should I bring anything?</p>
                      <p>
-                        Participants <strong>must</strong> bring their forms from registration
-                        to the event. You will not be allowed to participate without them!
+                        Participants <strong>must</strong> fill out their pre-attendance forms prior
+                        to the event. You will not be allowed to participate without having done so!
+                        Other than that, though, there's no need to bring anything to the event.
                      </p>
 
                      <p>Where is Catalyst?</p>
                      <p>
-                        The event will be in the <a href="https://goo.gl/maps/vYgv5rqy1hz"
-                        target="_blank">Klaus Advanced Computing Building</a> at Georgia Tech.
+                        While the event is normally held in the <a href="https://goo.gl/maps/vYgv5rqy1hz"
+                        target="_blank">Klaus Advanced Computing Building</a> at Georgia Tech, this
+                        upcoming event will be completely virtual!
                      </p>
 
                      <!-- <p>What about parking?</p>
@@ -352,14 +354,12 @@
                         To accomodate as many students as possible, we have split the schedule
                         into two sections, A and B. The A schedule runs from 9am - 7pm and the
                         B schedule runs from 10am - 8pm. Both schedules  will get the same
-                        instructions; they differ only in the start and  end times as well as
+                        instructions; they differ only in the start and end times as well as
                         the timing for a presentation. Whichever schedule you choose has no effect
                         on the content you learn, so pick the one that is most convenient for you!
-                        Please note that students being picked-up or dropped-off together should
-                        register for the same session.
                      </p>
 
-                     <p>What steps are you taking to ensure participants' safety and health during this event?</p>
+                     <!-- <p>What steps are you taking to ensure participants' safety and health during this event?</p>
                      <p>
                         Effective immediately, Georgia Tech is requiring that all large-scale campus
                         events adopt enhanced public health protocols. As event organizers, we will
@@ -370,7 +370,7 @@
                         of everyone involved in Catalyst is of our utmost importance. For any additional
                         questions or concerns, please contact us at <a href="mailto:hello@hack.gt">
                         hello@hack.gt</a>!
-                     </p>
+                     </p> -->
 
                      <p>Other Questions?</p>
                      <p>
