--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>Catalyst</title>
+      <title>Catalyst 4</title>
 
       <meta property="og:title" content="Catalyst 4" />
       <meta property="og:url" content="https://catalyst.hack.gt/" />
