chore: add catalyst mentor registration links

--- a/index.html
+++ b/index.html
@@ -169,19 +169,26 @@
                   <h1>Registration</h1>
                   <div class="container">
                      <div class="col">
-                        <!-- <p>
-                           You can register
+                        <p>
+                        <!--    You can register
                            <a href="https://registration.catalyst.hack.gt/" target="_blank">here!</a>
                            </p>
                            <p>
                            Registration closes on <strong>March 14th for participants</strong> and
                            <strong>February 21st for mentors</strong> , so sign up now!
-                           </p>
-                           <p>
+                           </p> -->
+                           <!-- <p>
                            Partcipants <strong>MUST</strong> bring the necessary forms to the event
                            as stated by registration:
                            </p> -->
-                        <p>Registration for the event has not yet been posted. Stay tuned for more details!</p>
+                           <p> Mentor registration is now open <a href="https://registration.catalyst.hack.gt/" target="_blank">here!</a>
+                              <p>
+                           <p>
+                           Registration closes on 
+                           <strong>February 19th for mentors</strong> , so sign up now!
+                           </p>
+
+                        <!-- <p>Registration for the event has not yet been posted. Stay tuned for more details!</p> -->
                         <!-- <ul>
                            <li>
                              <a href="https://drive.google.com/uc?export=download&id=1t18WRPrLpFW1kd0t9AuCfTia0waOreAu">UNDER 18</a>
