chore: update student registration link
* changed links to partipant/mentor applications in #registration section
* created banner at the top of #home section redirecting to applications

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 
          <div id="content">
             <section id="home">
+               <div id="banner">
+                  Apply to be part of the event <a href="https://registration.catalyst.hack.gt/apply"
+                  target="_blank"><strong>here!</strong></a>
+               </div>
+
                <div id="splash-parent">
                   <div id="splash-text">
                      <div class="col">
@@ -170,13 +175,14 @@
                      <div class="col">
                         <h2><strong>Students</strong></h2>
                         <p>
-                           Student registration is not open at the moment, but applications will be
-                           available <strong>mid February</strong>. Hope to see you then!
+                           Student registration is now open <a href="https://registration.catalyst.hack.gt/apply/participant"
+                           target="_blank">here!</a> The application closes on <strong>March 19th</strong>,
+                           so be sure to sign up if you're interested in participating in the event.
                         </p>
                         <br>
                         <h2><strong>Mentors</strong></h2>
                         <p>
-                           Mentor registration is now open <a href="https://registration.catalyst.hack.gt/"
+                           Mentor registration is now open <a href="https://registration.catalyst.hack.gt/apply/mentor"
                            target="_blank">here!</a> The application closes on <strong>February 19th</strong>,
                            so be sure to sign up if you're interested in becoming a mentor!
                         </p>
