fix: mentor application update
* updated mentor section with new registration date & raffle incentive
* corrected minor typo in site description ("epxlore" -> "explore")

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="viewport" content="initial-scale=1, minimum-scale=1" />
       <meta property="og:image" content="https://catalyst.hack.gt/assets/Catalyst_Mainpage_Example.png" />
       <meta property="og:description" content="Catalyst is a free event held on Saturday,
-          March 28th, where metro Atlanta high school students will epxlore technology and
+          March 28th, where metro Atlanta high school students will explore technology and
           learn from our sponsors and mentors at Georgia Tech." />
 
       <link href="style.css" rel="stylesheet" />
@@ -183,8 +183,9 @@
                         <h2><strong>Mentors</strong></h2>
                         <p>
                            Mentor registration is now open <a href="https://registration.catalyst.hack.gt/apply/mentor"
-                           target="_blank">here!</a> The application closes on <strong>February 19th</strong>,
-                           so be sure to sign up if you're interested in becoming a mentor!
+                           target="_blank">here!</a> The application closes on <strong>February 28th</strong>, so be sure
+                           to sign up if you're interested! Make sure you refer people to be a mentor too, as we're raffling
+                           off a set of brand new AirPods to someone that refers another mentor to sign up!
                         </p>
                      </div>
                   </div>
