--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                   <li><span>Tracks</span></li>
                </a>
                <a
+                  href="#schedule"
+                  onmouseover="gradientTime(this)"
+                  onmouseout="removeColor(this)"
+               >
+                  <li><span>Schedule</span></li>
+               </a>
+               <a
                   href="#faq"
                   onmouseover="gradientTime(this)"
                   onmouseout="removeColor(this)"
@@ -303,6 +310,62 @@
                         </div>
                      </div>
                   </div>
+               </div>
+            </section>
+
+            <section id="schedule">
+               <div>
+                  <h1>Schedule</h1>
+                  <table>
+                     <tr>
+                        <th><p>Time Block</p></th>
+                        <th><p>Activity/Event</p></th>
+                     </tr>
+                     <tr>
+                        <td>9:00am - 9:30am</td>
+                        <td>Checkin and Opening Ceremonies</td>
+                     </tr>
+                     <tr>
+                        <td>9:30am - 10:30am</td>
+                        <td>Track Work Block #1</td>
+                     </tr>
+                     <tr>
+                        <td>10:30am - 11:00am</td>
+                        <td>Mini-Event Break</td>
+                     </tr>
+                     <tr>
+                        <td>11:00am - 12:00pm</td>
+                        <td>Track Work Block #2</td>
+                     </tr>
+                     <tr>
+                        <td>12:00pm - 12:30pm</td>
+                        <td>Lunch Break</td>
+                     </tr>
+                     <tr>
+                        <td>12:30pm - 1:00pm</td>
+                        <td>Panelist Event</br>(hear about academic &amp; career experiences from professionals)</td>
+                     </tr>
+                     <tr>
+                        <td>1:00pm - 1:30pm</td>
+                        <td>Mini-Event Break</td>
+                     </tr>
+                     <tr>
+                        <td>1:30pm - 2:15pm</td>
+                        <td>Train Work Block #3</td>
+                     </tr>
+                     <tr>
+                        <td>2:15pm - 2:45pm</td>
+                        <td>Opportunities Fair</br>(learn about future STE(A)M opportunities)</td>
+                     </tr>
+                     <tr>
+                        <td>2:45pm - 3:45pm</td>
+                        <td>Track Work Block #4</td>
+                     </tr>
+                     <tr>
+                        <td>3:45pm - 4:00pm</td>
+                        <td>Closing Ceremonies</td>
+                     </tr>
+                  </table>
                </div>
             </section>
 
